[gd_scene load_steps=7 format=3 uid="uid://bxfmkq8bgumev"]

[ext_resource type="Script" path="res://Scenes/Scripts/combat.gd" id="1_l0hou"]
[ext_resource type="PackedScene" uid="uid://bs6ej35oeq114" path="res://Scenes/Quest/note.tscn" id="2_ob6w2"]
[ext_resource type="PackedScene" uid="uid://bnvwxkdgsp4vp" path="res://Scenes/Pieces/part_sprite.tscn" id="3_s2yiu"]
[ext_resource type="PackedScene" uid="uid://dmylbepggimag" path="res://Scenes/Quest/enemy_sprite.tscn" id="4_7b527"]
[ext_resource type="LabelSettings" uid="uid://dw18pcv0wtiom" path="res://Themes/BodyLabel.tres" id="5_ipftc"]
[ext_resource type="PackedScene" uid="uid://cefk5ifs7rf4r" path="res://Scenes/Quest/minigame_column.tscn" id="6_qu7nc"]

[node name="Combat" type="Node2D"]
script = ExtResource("1_l0hou")
noteScene = ExtResource("2_ob6w2")

[node name="Background" type="ColorRect" parent="."]
offset_right = 924.0
offset_bottom = 984.0
color = Color(0.933333, 0.862745, 0.701961, 1)

[node name="EnemyScreen" type="ColorRect" parent="."]
offset_left = 26.0
offset_top = 16.0
offset_right = 904.0
offset_bottom = 739.0
color = Color(0.588235, 0.505882, 0.439216, 1)

[node name="background" type="Sprite2D" parent="EnemyScreen"]
position = Vector2(439, 361.5)

[node name="Reward" type="Label" parent="EnemyScreen"]
layout_mode = 0
offset_left = 408.0
offset_top = 224.0
offset_right = 448.0
offset_bottom = 247.0
label_settings = ExtResource("5_ipftc")

[node name="PartSprite" parent="EnemyScreen" instance=ExtResource("3_s2yiu")]
position = Vector2(442, 328)

[node name="Enemy" parent="EnemyScreen" node_paths=PackedStringArray("background") instance=ExtResource("4_7b527")]
position = Vector2(439, 361.5)
background = NodePath("../background")

[node name="Health" type="ColorRect" parent="EnemyScreen"]
layout_mode = 0
offset_left = 17.0
offset_top = 636.0
offset_right = 563.0
offset_bottom = 676.0
color = Color(0.254902, 0.105882, 0.105882, 1)

[node name="Name" type="Label" parent="EnemyScreen/Health"]
layout_mode = 0
offset_top = -41.0
offset_right = 137.0
label_settings = ExtResource("5_ipftc")

[node name="Current" type="ColorRect" parent="EnemyScreen/Health"]
layout_mode = 0
offset_right = 546.0
offset_bottom = 40.0
color = Color(0.0156863, 0.690196, 0, 1)

[node name="LastHit" type="Label" parent="EnemyScreen/Health"]
layout_mode = 0
offset_left = 1.0
offset_top = 42.0
offset_right = 81.0
offset_bottom = 84.0
label_settings = ExtResource("5_ipftc")

[node name="You" type="ColorRect" parent="EnemyScreen"]
layout_mode = 0
offset_left = 5.0
offset_top = 840.0
offset_right = 551.0
offset_bottom = 880.0
color = Color(0.254902, 0.105882, 0.105882, 1)

[node name="Name" type="Label" parent="EnemyScreen/You"]
layout_mode = 0
offset_top = -41.0
offset_right = 137.0
text = "You"
label_settings = ExtResource("5_ipftc")

[node name="Current" type="ColorRect" parent="EnemyScreen/You"]
layout_mode = 0
offset_right = 546.0
offset_bottom = 40.0
color = Color(0.0156863, 0.690196, 0, 1)

[node name="LastHit" type="Label" parent="EnemyScreen/You"]
layout_mode = 0
offset_left = 1.0
offset_top = 41.0
offset_right = 361.0
offset_bottom = 83.0
label_settings = ExtResource("5_ipftc")

[node name="Minigame" type="Node2D" parent="."]
position = Vector2(-398, 836)

[node name="A" parent="Minigame" instance=ExtResource("6_qu7nc")]

[node name="W" parent="Minigame" instance=ExtResource("6_qu7nc")]
position = Vector2(100, 0)
dir = 1

[node name="S" parent="Minigame" instance=ExtResource("6_qu7nc")]
position = Vector2(200, 0)
dir = 3

[node name="D" parent="Minigame" instance=ExtResource("6_qu7nc")]
position = Vector2(300, 0)
dir = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="hit" from="Minigame/A" to="." method="hit_player"]
[connection signal="hit" from="Minigame/W" to="." method="hit_enemy"]
[connection signal="hit" from="Minigame/S" to="." method="hit_enemy"]
[connection signal="hit" from="Minigame/D" to="." method="hit_player"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
